--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+  margin: 0 auto;
+  width: 70%;
+  text-align: center;
+  background-color: rgb(38, 38, 38);
+  color: rgb(106, 159, 214);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .gameBox {
   display: grid;
   grid-template-columns: 120px 120px 120px;
@@ -10,3 +19,4 @@
   height: 100px;
   border: 3px solid black;
 }
+
