alternating turn code working

--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.gameBox {
+.gameboard {
   display: grid;
   grid-template-columns: 120px 120px 120px;
   justify-content: center;
   row-gap: 15px;
 }
 
-.gameBox div {
+.gameboard div {
   width: 100px;
   height: 100px;
   border: 3px solid black;
