upload before saturday class, still work in progress. adding player scores

--- a/style.css
+++ b/style.css
@@ -39,3 +39,10 @@ button {
   border-radius: 15px;
   height: 25px;
 }
+
+#playerScores {
+  display: grid;
+  grid-template-columns: 180px 180px;
+  justify-content: center;
+  row-gap: 45px;
+}
